bk_ida/gccida/c0/apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1361:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // [rsp+10h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1362:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1363:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1364:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modeb; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modec; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1369:6: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
if ( apply_args_size_size < 0 ) 
     ^~~~~~~~~~~~~~~~~~~~
     apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1374:1: error: use of undeclared identifier 'apply_args_size_size'
apply_args_size_size = mode_size[v0]; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1380:1: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
apply_args_size_size += mode_size[v1]; 
^~~~~~~~~~~~~~~~~~~~
apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1380:22: error: invalid operands to binary expression ('int (void)' and 'const unsigned char')
apply_args_size_size += mode_size[v1]; 
~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1429:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1430:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1467:6: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
if ( apply_args_size_size % align ) 
     ^~~~~~~~~~~~~~~~~~~~
     apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1467:27: error: invalid operands to binary expression ('int (void)' and 'int')
if ( apply_args_size_size % align ) 
     ~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1468:1: error: use of undeclared identifier 'apply_args_size_size'
apply_args_size_size = align * ( ( align + apply_args_size_size - 1) / align); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1468:44: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
apply_args_size_size = align * ( ( align + apply_args_size_size - 1) / align); 
                                           ^~~~~~~~~~~~~~~~~~~~
                                           apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1468:70: error: invalid operands to binary expression ('int (*)(void)' and 'int')
apply_args_size_size = align * ( ( align + apply_args_size_size - 1) / align); 
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1469:32: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
apply_args_reg_offset[regno] = apply_args_size_size; 
                               ^~~~~~~~~~~~~~~~~~~~
                               apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1470:1: error: use of undeclared identifier 'apply_args_size_size'; did you mean 'apply_args_size'?
apply_args_size_size += mode_size[best_mode]; 
^~~~~~~~~~~~~~~~~~~~
apply_args_size
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1348:6: note: 'apply_args_size' declared here
int  apply_args_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/builtins.c:1470:22: error: invalid operands to binary expression ('int (void)' and 'const unsigned char')
apply_args_size_size += mode_size[best_mode]; 
~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_args_size/src/obj/builtins.o] Error 1
